envoy-sidecar-flask-app-1/etc/envoy.yaml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          generate_request_id: true
          tracing:
            provider:
              name: envoy.tracers.zipkin
              typed_config:
                "@type": type.googleapis.com/envoy.config.trace.v3.ZipkinConfig
                collector_cluster: zipkin
                collector_endpoint: "/api/v2/spans"
                collector_endpoint_version: HTTP_JSON
          access_log:
          - name: envoy.access_loggers.file
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
              path: /dev/stdout
              json_format:
                time: "%START_TIME%"
                duration: "%DURATION%"
                request_method: "%REQ(:METHOD)%"
                request_path: "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%"
                server_name: "%REQUESTED_SERVER_NAME%"
                route_name: "%ROUTE_NAME%"
                response_code: "%RESPONSE_CODE%"
                response_code_details: "%RESPONSE_CODE_DETAILS%"
                upstream_host: "%UPSTREAM_HOST%"
                upstream_cluster: "%UPSTREAM_CLUSTER%"
                upstream_transport_failure_reason: "%UPSTREAM_TRANSPORT_FAILURE_REASON%"
                upstream_service_time: "%RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%"
                forwarded_for: "%REQ(X-FORWARDED-FOR)%"
                authority: "%REQ(:AUTHORITY)%"      
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: envoy-sidecar-flask-app-1
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: flask-app-1
          http_filters:
          - name: envoy.filters.http.router
            typed_config: {}   
  clusters:
  - name: envoy-sidecar-flask-app-2
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: envoy-sidecar-flask-app-2
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: flask-app-1
                port_value: 5000   
  - name: zipkin
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: zipkin
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: zipkin   
                port_value: 9411
